@@ -1,3 +1,12 @@
+2011-07-03  Michael Albinus  <michael.albinus@gmx.de>
+
+	* debbugs-gnu.el (debbugs-widget-map): Add [mouse-1] and [mouse-2].
+	(debbugs-emacs): Add :help-echo and :suppress-done for report
+	pages' widgets.
+	(debbugs-show-reports): Remove suppress-done from arguments. It
+	must be read from the widget anyway. Tune inserting of bottom line
+	widgets.
+
 2011-07-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* debbugs-gnu.el (debbugs-emacs): Don't use widgets to provide
